@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="115"
+VERSION_BUILD="116"
 
 # $Log$
+#
+# BUILD : 1.4.0.116 (SVN)
+# BUGS  : 426
+# NOTES : Fixed parsing problem with multiple chan modes
 #
 # BUILD : 1.4.0.115 (SVN)
 # BUGS  : N/A
